# SetSequence

./: CMakeLists.txt  LICENSE.md  README.md
src/: offsets.cpp  offsets.h  portalstv.cpp  portalstv.h  sequence.cpp  sequence.h  vfuncs.cpp  vfuncs.h
